--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ nav ul li a:hover {
     color: #666;
 }
 
+section {
+    padding: 20px 40px;
+}
+
 /* Estilos do Formulário de Contato */
 form label {
     display: block;
@@ -90,4 +94,7 @@ footer {
     color: #fff;
     padding: 20px 0;
     text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
