--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,14 @@ nav ul li a:hover {
 
 section {
     padding: 20px 40px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+logo {
+    width: 100%;
+    height: 100%;
 }
 
 /* Estilos do Formulário de Contato */
