--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ body {
     line-height: 1.6;
     background-color: #f8f8f8;
     color: #333;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
@@ -57,6 +60,12 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #666;
+}
+
+main {
+    display: flex;
+    overflow: auto;
+    height: 100%;
 }
 
 section {
