--- a/styles.css
+++ b/styles.css
@@ -122,9 +122,10 @@ form button:hover {
 
 /* Estilos do Rodapé */
 footer {
-    background-color: #333;
-    color: #fff;
     padding: 20px 0;
     text-align: center;
     width: 100%;
+    color: #333;
+    font-size: 12px;
+    line-height: 16px;
 }
