--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,9 @@ body {
 
 /* Estilos do Header */
 header {
-    height: 120px;
     display: flex;
     gap: 40px;
+    padding: 20px 40px;
 }
 
 header a {
@@ -84,9 +84,7 @@ section {
 }
 
 .logo {
-    width: 100%;
-    margin: 0 20px;
-    max-height: 100%;
+    height: 80px;
 }
 
 /* Estilos do Formulário de Contato */
