--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f8f8f8;
+    background-color: #e4d7c5;
     color: #333;
     height: 100vh;
     display: flex;
@@ -36,12 +36,6 @@ header a {
 
 header h1 {
     font-size: 2em;
-}
-
-.lobster-regular {
-  font-family: "Lobster", sans-serif;
-  font-weight: 400;
-  font-style: normal;
 }
 
 /* Estilos da Navegação */
@@ -87,6 +81,17 @@ section {
     width: 100%;
     height: 100%;
     flex-direction: column;
+}
+
+section h2 {
+    font-family: "Lobster", sans-serif;
+    font-style: normal;
+    line-height: 100%;
+    font-weight: 400;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 0 #3d3933;
+    font-size: 13vw;
+    color: #FFF;
 }
 
 .logo {
