--- a/styles.css
+++ b/styles.css
@@ -47,17 +47,18 @@ nav {
     align-items: center;
     text-align: center;
     align-self: center;
+    gap: 30px;
 }
 
 nav ul {
     list-style-type: none;
     text-align: center;
     display: flex;
+    gap: 30px;
 }
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
 }
 
 nav ul li a {
