--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     line-height: 1.6;
     background-color: #e4d7c5;
     color: #333;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     padding: 5%;
