--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-/* Global Styles */
+/* Estilos Globais */
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -17,10 +17,12 @@ body {
 }
 
 .container {
-    padding: 0 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-/* Header Styles */
+/* Estilos do Header */
 header {
     display: flex;
     gap: 40px;
@@ -36,7 +38,7 @@ header h1 {
     font-size: 2em;
 }
 
-/* Navigation Styles */
+/* Estilos da Navegação */
 nav {
     width: 100%;
     justify-content: flex-start;
@@ -69,7 +71,6 @@ nav ul li a:hover {
     color: #666;
 }
 
-/* Main Styles */
 main {
     display: flex;
     overflow: auto;
@@ -82,11 +83,9 @@ section {
     width: 100%;
     height: 100%;
     flex-direction: column;
-    gap: 20px;
 }
 
-/* Typography */
-h2 {
+section h2 {
     font-family: "Lobster", sans-serif;
     font-style: normal;
     line-height: 100%;
@@ -97,17 +96,15 @@ h2 {
     color: #FFF;
 }
 
-/* Reusable Block */
 .block {
     display: flex;
 }
 
-/* Logo */
 .logo {
     height: 80px;
 }
 
-/* Form Styles */
+/* Estilos do Formulário de Contato */
 form label {
     display: block;
     margin-bottom: 10px;
@@ -138,7 +135,7 @@ form button:hover {
     background-color: #666;
 }
 
-/* Footer Styles */
+/* Estilos do Rodapé */
 footer {
     padding: 20px 0;
     text-align: center;
@@ -155,29 +152,6 @@ footer {
     }
 }
 
-#map {
-    height: 400px;
-    width: 100%;
-    position: relative;
-}
-
-.custom-map-control-button {
-    background-color: white;
-    border: 2px solid #4CAF50;
-    border-radius: 3px;
-    box-shadow: 0 2px 6px rgba(0,0,0,.3);
-    cursor: pointer;
-    margin-bottom: 22px;
-    text-align: center;
-    padding: 6px;
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1000; /* Ensure the button is always on top */
-}
-
-.custom-map-control-button:hover {
-    background-color: #4CAF50;
-    color: white;
+.hidden {
+    display: none;
 }
