--- a/map.css
+++ b/map.css
@@ -4,13 +4,13 @@
 }
 
 #map {
-    height: 400px;
-    width: 70%;
+    height: 600px;
+    width: 100%;
 }
 
 #results-panel {
     width: 30%;
-    height: 400px;
+    height: 600px;
     overflow-y: scroll;
     background-color: #f9f9f9;
     padding: 10px;
@@ -26,16 +26,29 @@
 }
 
 #controls {
-    margin-top: 10px;
+    margin-bottom: 20px;
     text-align: center;
+    display: flex;
+}
+
+#controls input {
+    width: 80px;
+    height: 24px;
+    padding: 0 5px;
 }
 
 .custom-map-control-button {
     background-color: #fff;
     border: none;
-    padding: 10px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-left: 10px;
+    white-space: nowrap;
+    padding: 0 10px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
 }
 
 .custom-map-control-button:hover {
@@ -48,16 +61,23 @@
     border-radius: 50%;
     height: 25px;
     width: 25px;
-    display: inline-block; /* Ensures the marker is displayed correctly */
+    display: inline-block;
+    /* Ensures the marker is displayed correctly */
 }
 
 /* Media query for screens smaller than 700px */
 @media (max-width: 700px) {
-   #map-container {
-    flex-direction: column;
-   }
-   #results-panel, #map {
-    width: 100%;
-   }
-}
+    #map-container {
+        flex-direction: column;
+    }
 
+    #results-panel {
+        width: 100%;
+        height: 300px;
+    }
+
+    #map {
+        width: 100%;
+        height: 300px;
+    }
+}
