--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,13 @@ section h2 {
     margin-bottom: 20px ;
 }
 
+.hero-image {
+    display: flex;
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
 .block {
     display: flex;
 }
@@ -159,6 +166,9 @@ footer {
 
 section h2 {
     font-size: 10vw;
+}
+.hero-image {
+    max-height: 230px;
 }
 
 }
