--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ nav {
     align-items: center;
     text-align: center;
     align-self: center;
-    gap: 30px;
+    /* gap: 30px; */
     flex-wrap: wrap;
 }
 
