--- a/projetos/mexirica/mexirica.styles.css
+++ b/projetos/mexirica/mexirica.styles.css
@@ -1,4 +1,3 @@
-/* General Content Styling */
 #user-guide {
     max-width: 900px;
     margin: auto;
@@ -9,13 +8,11 @@
     flex-direction: column;
     border: 2px solid #808080;
     border-radius: 8px;
-    /* padding: 10px; */
     margin: 20px auto;
-    max-width: 900px; /* Limit max width for better readability */
-    background-color: #f9f9f9; /* Light background for better contrast */
+    max-width: 900px; 
+    background-color: #f9f9f9; 
 }
 
-/* Article Styling */
 article {
     display: flex;
     flex-direction: column;
@@ -23,13 +20,11 @@ article {
     margin: 15px 0;
     background-color: #ffffff;
     border-radius: 8px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Summary Section Styling */
 #summary {
-    /* margin: 20px auto; */
-    max-width: 900px; /* Same width as the content */
+    max-width: 900px;
 }
 
 #summary h3 {
@@ -38,7 +33,6 @@ article {
     color: #333;
 }
 
-/* Summary List Styling */
 #summary-list {
     display: flex;
     flex-direction: column;
@@ -48,7 +42,7 @@ article {
     margin: 0;
     background-color: #f0f0f0;
     border-radius: 8px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); 
 }
 
 #summary-list li {
@@ -65,21 +59,19 @@ article {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-/* Hover Effects for Summary Links */
 #summary-list li a:hover {
     background-color: #007bff;
     color: #fff;
 }
 
- /* Styling for the language dropdown */
  #language-select, #custom-language-select {
-    width: 300px;
+    width: 100%;
+    max-width: 60%;
     padding: 10px;
     font-size: 1.1em;
     background-color: #f2f2f2;
     border: 2px solid #ccc;
     border-radius: 5px;
-    margin: 10px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     appearance: none;
@@ -89,7 +81,6 @@ article {
     border-color: #00aaff;
 }
 
-/* Custom styling for button */
 #translate-btn {
     background-color: #ff5900;
     color: white;
@@ -99,7 +90,12 @@ article {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-top: 10px;
+}
+
+.language-selection {
+    display: flex;
+    margin: 15px 0;
+    gap: 10px;
 }
 
 #translate-btn:hover {
@@ -110,31 +106,24 @@ article {
     background-color: #1198d7;
 }
 
-/* Custom feedback message */
 #feedback {
     margin: 30px auto;
     font-size: 0.9em;
     color: #666;
 }
 
-/* Hide the custom language select initially */
 #custom-language-select {
     display: none;
 }
 
-/* Style for short description */
 .description {
     margin-top: 20px;
     font-size: 1em;
-    /* line-height: 1.2em; */
     color: #333;
 }
 
-/* English guidance */
 .english-guide {
-    /* background-color: #f0f8ff; */
-    padding: 15px;
-    margin-top: 20px;
+    padding: 0 15px;
     border-left: 4px solid #ff8400;
     font-size: 0.9em;
 }
@@ -150,7 +139,6 @@ article {
     display: block;
 }
 
-/* Mobile Responsiveness */
 @media (max-width: 768px) {
     #guide-content {
         padding: 15px;
@@ -159,7 +147,7 @@ article {
 
     #summary-list {
         margin: 0;
-        box-shadow: none; /* Simplify for smaller screens */
+        box-shadow: none; 
     }
 
     #summary-list li a {
@@ -168,7 +156,6 @@ article {
     }
 
     article {
-        /* padding: 22px; */
         padding: 1.5rem;
     }
 }
