--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,9 @@ header {
     display: flex;
     gap: 40px;
     padding: 20px 40px;
+    max-width: 900px;
+    margin: auto;
+    width: 100%;
 }
 
 header a {
@@ -108,6 +111,8 @@ main {
     display: flex;
     overflow: auto;
     height: 100%;
+    max-width: 900px;
+    margin: auto;
 }
 
 section {
