--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,8 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: #333;
-    font-weight: bold;
+    /* font-weight: bold; */
+    white-space: nowrap;
 }
 
 nav ul li a:hover {
