--- a/styles.css
+++ b/styles.css
@@ -48,11 +48,11 @@ header {
 .nav-menu {
     list-style: none;
     display: flex;
-    gap: 20px;
+    /* gap: 20px; */
 }
 
 .nav-menu li {
-    margin: 15px 0;
+    padding: 15px;
     width: 100%;
 
 }
@@ -98,14 +98,14 @@ body.menu-open {
 
 .nav-menu.open {
     display: flex;
-    transform: translateX(0);
+    transform: translateX(0) translateY(100px);
 }
 
 #menu-toggle {
     background: none;
     border: none;
     cursor: pointer;
-    display: none; /* Hidden on larger screens */
+    /* display: none; Hidden on larger screens */
 }
 
 /* Section Layout */
@@ -117,6 +117,7 @@ section {
     gap: 20px;
     margin: 20px auto;
     max-width: 1200px;
+    flex-direction: column;
 }
 
 /* section.alt {
