--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ header {
     text-decoration: none;
     color: #555;
     font-weight: bold;
-    padding: 8px 0px;
+    padding: 15px 0px;
     border-radius: 5px;
     /* background-color: #f67c1b; */
     /* transition: background-color 0.3s ease, transform 0.3s ease; */
@@ -97,6 +97,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 2rem;
 }
 
 .nav-menu li a:hover {
@@ -233,7 +234,7 @@ a.btn:hover {
 section.highlight {
     background-color: #ffecd1;
     border-radius: 10px;
-    flex-direction: row;
+    /* flex-direction: row; */
     margin: 20px auto;
 
 }
@@ -289,18 +290,28 @@ footer {
     font-size: 0.8rem;
     display: flex;
     justify-content: center;
+    gap: 40px;
 }
-
 footer a {
     color: #333;
     text-decoration: none;
     font-weight: bold;
-    margin: 0 10px;
+    /* margin: 0 20px; */
+    /* transition: transform 0.3s, background 0.3s; */
 }
 
 footer a:hover {
-    transform: scale(1.1);
+    transform: scale(1.3);
+    background: linear-gradient(90deg, 
+        rgba(181,142,4,0.248) 0%, 
+        rgba(173,17,163,0.565) 100%, 
+        rgba(255,255,255,1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent; 
 }
+
 
 /* ========================================= */
 /* Responsive Design for Mobile (max-width: 768px) */
