--- a/styles.css
+++ b/styles.css
@@ -103,9 +103,6 @@ header {
 .nav-menu li a:hover {
     /* background-color: #eee; */
     transform: scale(1.3);
-    /* background: rgb(181,142,4); */
-    /* background: linear-gradient(90deg, rgba(181,142,4,0.248358718487395) 0%, rgba(173,17,163,0.5648853291316527) 100%, rgba(255,255,255,1) 100%); */
-
 
 }
 
@@ -320,10 +317,16 @@ footer a:hover {
     header {
         flex-direction: column;
     }
+    
+    .nav-menu {
+        background: rgb(181,142,4);
+        background: linear-gradient(90deg, rgba(181,142,4,0.248358718487395) 0%, rgba(173,17,163,0.5648853291316527) 30%, rgba(255,255,255,1) 30%);
+    }
 
-    nav ul {
-        flex-direction: column;
-        gap: 10px;
+    .nav-menu li {
+        /* padding: 15px; */
+        width: 70%;
+        /* padding-right: 30px; */
     }
 
     section {
@@ -349,33 +352,8 @@ footer a:hover {
         display: block;
     }
 
-    .nav-menu {
-        display: none;
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        right: 0;
-        height: 100%;
-        width: 250px;
-        /* background-color: #ffae42; */
-        padding: 20px;
-        transform: translateX(100%);
-        transition: transform 0.5s ease;
-    }
-
-    .nav-menu.open {
-        transform: translateX(0) translatey(101px);
-    }
-
-    body.menu-open::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        /* background-color: rgba(0, 0, 0, 0.4); */
-        /* z-index: 1000; */
+    body.menu-open main {
+        overflow: hidden;
     }
 
     footer a {
